Webpack is fully setup!
Ready for final movements!
- Webpack 5 has been configured!
- ESLint and Prettier are working in Webstorm!
- Babel
- Autoprefixer
- All kind of loaders etc

I WON!!!!!!

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,5 +1,5 @@
 /* Importing everything here */
-@import "variables";
+@import "_variables";
 @import "init";
 @import "article";
 @import "brands-repair-list";
