--- a/src/styles/init.scss
+++ b/src/styles/init.scss
@@ -1,171 +1,5 @@
-@font-face {
-  font-family: 'TT Lakes';
-  src: url('../fonts/TTLakes-Regular.eot');
-  src: local('TT Lakes Regular'), local('TTLakes-Regular'),
-  url('../fonts/TTLakes-Regular.eot?#iefix') format('embedded-opentype'),
-  url('../fonts/TTLakes-Regular.woff') format('woff'),
-  url('../fonts/TTLakes-Regular.ttf') format('truetype');
-  font-weight: normal;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'TT Lakes';
-  src: url('../fonts/TTLakes-Bold.eot');
-  src: local('TT Lakes Bold'), local('TTLakes-Bold'),
-  url('../fonts/TTLakes-Bold.eot?#iefix') format('embedded-opentype'),
-  url('../fonts/TTLakes-Bold.woff') format('woff'),
-  url('../fonts/TTLakes-Bold.ttf') format('truetype');
-  font-weight: bold;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'TT Lakes';
-  src: url('../fonts/TTLakes-Medium.eot');
-  src: local('TT Lakes Medium'), local('TTLakes-Medium'),
-  url('../fonts/TTLakes-Medium.eot?#iefix') format('embedded-opentype'),
-  url('../fonts/TTLakes-Medium.woff') format('woff'),
-  url('../fonts/TTLakes-Medium.ttf') format('truetype');
-  font-weight: 500;
-  font-style: normal;
-}
-
-/*Resetting values*/
-html {
-  font-family: "TT Lakes", Arial, sans-serif;
-  box-sizing: border-box;
-}
-
-*, *:before, *:after {
-  box-sizing: inherit;
-}
-
-ul,
-li,
-body,
-p,
-button {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  border: none;
-  font: inherit;
-}
-
-a, a:visited {
-  text-decoration: none;
-  color: inherit;
-}
 
 /*Mobile first, for screens 320-767px*/
-.page-wrapper {
-  overflow: hidden;
-  max-width: 767px;
-  background-color: #f8f8f8;
-  position: relative;
-}
-
-.header {
-  display: flex;
-  flex-direction: column;
-}
-
-.header--gray-background {
-  background-color: #f8f8f8;
-}
-
-.lang-switch {
-
-}
-
-.lang-switch__item {
-  appearance: none;
-  position: absolute;
-}
-
-.lang-switch__item:checked + .lang-switch__label--text {
-  color: #7E7E82;
-}
-
-.menu {
-  display: flex;
-}
-
-.mobile-side--width--320 {
-  width: 320px;
-}
-
-.menu--header-menu {
-  border-bottom: 1px #D9FFF5 solid;
-  background-color: #fff;
-}
-
-.menu__header-item {
-  display: flex;
-  align-items: center;
-  flex-direction: row;
-  height: 88px;
-  margin-right: 16px;
-}
-
-.menu__header-item--push-right {
-  margin-left: auto;
-}
-
-.menu__header-item--push-down {
-  margin-top: auto;
-}
-
-.menu__header-item:last-child {
-  margin-right: 0;
-}
-
-.menu__header-item--button {
-  width: 40px;
-  height: 40px;
-  border: none;
-  background-color: transparent;
-  transition-property: opacity, transform;
-  transition-duration: 300ms;
-}
-
-.menu__header-item--button:hover {
-  opacity: 0.7;
-  transform: scale(1.1);
-}
-
-.menu__header-item--button-call {
-  background-image: url("../imgs/ic/ic_call.svg");
-}
-
-.menu__header-item--button-chat {
-  background-image: url("../imgs/ic/ic_chat.svg");
-}
-
-.menu__header-item--button-profile {
-  background-image: url("../imgs/ic/ic_profile.svg");
-}
-
-.menu__header-item--button-repair {
-  background-image: url("../imgs/ic/ic_repair.svg");
-}
-
-.menu__header-item--button-search {
-  background-image: url("../imgs/ic/ic_search.svg");
-}
-
-.menu__header-item--button-checkstatus {
-  background-image: url("../imgs/ic/ic_checkstatus.svg");
-}
-
-.menu__header-item--button-burger {
-  background-image: url("../imgs/ic/ic_burger.svg");
-}
-
-.menu__header-item--title {
-  display: none;
-}
 
 .slider-menu__slider-item {
   font-weight: 500;
@@ -173,68 +7,18 @@ a, a:visited {
   height: 40px;
   margin-left: 16px;
   padding: 8px 16px;
-  color: #7e7e82;
+  color: $gray;
 }
 
 .slider-menu__slider-item:last-child {
   margin-right: 16px;
 }
 
-.menu--active-item {
-  border: 2px #B8FFEC solid;
-  border-radius: 5px;
-  background-color: #fff;
-}
-
-.menu--fading::before {
-  position: absolute;
-  right: 0;
-  width: 24px;
-  height: 40px;
-  content: "";
-  background: linear-gradient(270.00deg, #f8f8f8 16.836%, rgba(248, 248, 248, 0) 100%);
-}
 
 .slider-menu {
   overflow-x: auto;
   min-height: 42px;
   padding-bottom: 24px;
-}
-
-.menu--left-side {
-  display: flex;
-  margin-right: auto;
-  margin-left: 16px;
-}
-
-.menu__header-item--no-right-margin {
-  margin-right: 0;
-}
-
-.menu__header-item--no-bottom-margin {
-  margin-bottom: 0;
-}
-
-.menu__header-item--divider {
-  display: flex;
-  width: 2px;
-  height: 32px;
-  margin-top: auto;
-  margin-bottom: auto;
-  border: 1px #eaeaea solid;
-  border-radius: 1px;
-}
-
-.menu--laptop {
-  display: none;
-}
-
-.menu--right-side {
-  display: flex;
-  justify-content: space-between;
-  width: 50%;
-  margin-right: 24px;
-  margin-left: 16px;
 }
 
 .text {
@@ -245,7 +29,7 @@ a, a:visited {
 }
 
 .title {
-  color: #1b1c21;
+  color: $dark;
 }
 
 .title--top::before {
@@ -256,7 +40,7 @@ a, a:visited {
   content: "";
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
-  background-color: #41f6d7;
+  background-color: $green;
 }
 
 .title--top {
@@ -280,7 +64,7 @@ a, a:visited {
   margin: 16px 0;
   padding-left: 20px;
   letter-spacing: -0.01em;
-  color: #1b1c21;
+  color: $dark;
 }
 
 .article__content--read-next::before {
@@ -292,8 +76,8 @@ a, a:visited {
   top: 4px;
   left: 10px;
   transform: rotate(45deg);
-  border-bottom: 1px #41f6d7 solid;
-  border-right: 1px #41f6d7 solid;
+  border-bottom: 1px $green solid;
+  border-right: 1px $green solid;
 }
 
 .article__content--read-next::after {
@@ -305,8 +89,8 @@ a, a:visited {
   top: 10px;
   left: 10px;
   transform: rotate(45deg);
-  border-bottom: 1px #41f6d7 solid;
-  border-right: 1px #41f6d7 solid;
+  border-bottom: 1px $green solid;
+  border-right: 1px $green solid;
 }
 
 .article__image {
@@ -340,7 +124,7 @@ a, a:visited {
   position: relative;
   min-height: 100%;
   width: 320px;
-  background-color: #fff;
+  background-color: $white;
   z-index: 10;
   box-shadow: 16px 0 52px 0 rgba(14, 24, 80, 0.2),
   -2px 0 4px 0 rgba(69, 79, 126, 0.02);
@@ -381,7 +165,7 @@ a, a:visited {
   transform: translateX(-20px);
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
-  background-color: #41f6d7;
+  background-color: $green;
 }
 
 
@@ -428,9 +212,9 @@ a, a:visited {
   flex: 0 0 222px;
   height: 72px;
 
-  border: 1px #eaeaea solid;
+  border: 1px $light-gray solid;
   border-radius: 6px;
-  background-color: #fff;
+  background-color: $white;
   background-position: 20px center;
 }
 
@@ -440,7 +224,7 @@ a, a:visited {
   z-index: 1;
   width: 39px;
   height: 39px;
-  border: 1px solid #ff3e79;
+  border: 1px solid $button-red;
   border-radius: 50%;
   margin: auto 0 auto 168px;
 }
@@ -451,8 +235,8 @@ a, a:visited {
   position: absolute;
   width: 10px;
   height: 10px;
-  border-right: 1px solid #ff3e79;
-  border-top: 1px solid #ff3e79;
+  border-right: 1px solid $button-red;
+  border-top: 1px solid $button-red;
   top: 30px;
   right: 30px;
   rotate: 45deg;
@@ -467,7 +251,7 @@ a, a:visited {
   position: relative;
   margin-left: 48px;
   margin-bottom: 16px;
-  background-color: #f8f8f8;
+  background-color: $gray-lighter;
 }
 
 .brands-repair-list__more-btn::before {
@@ -478,9 +262,9 @@ a, a:visited {
   height: 5px;
   width: 5px;
   rotate: 45deg;
-  box-shadow: 1px 1px 0 0 #41f6d7,
-  3px 3px 0 0 #f8f8f8,
-  4px 4px 0 0 #41f6d7;
+  box-shadow: 1px 1px 0 0 $green,
+  3px 3px 0 0 $gray-lighter,
+  4px 4px 0 0 $green;
 }
 
 .brands-repair-list__less-btn {
@@ -524,14 +308,6 @@ a, a:visited {
     margin: 20px 0 0 0;
   }
 
-  .menu--laptop {
-    display: flex;
-  }
-
-  .menu--left-side {
-    margin-right: auto;
-    margin-left: 24px;
-  }
 
   .article {
     position: relative;
@@ -608,39 +384,6 @@ a, a:visited {
     margin: 20px 0 0 0;
   }
 
-  .menu--left-side {
-    margin-right: 595px;
-    margin-left: 24px;
-  }
-
-  .menu--fading::after {
-    display: none;
-  }
-
-  .menu--header-menu {
-    height: 92px;
-    border-bottom: none;
-    background-color: #f8f8f8;
-  }
-
-  .menu--left-side li:first-child .menu__header-item {
-    margin-right: 0;
-  }
-
-  .menu__header-item--hide-on-desktop {
-    display: none;
-  }
-
-  .menu__header-item--title {
-    display: block;
-    margin-right: 8px;
-  }
-
-  .menu--right-side {
-    align-self: flex-end;
-    width: unset;
-  }
-
   .article__image {
     max-width: 50%;
     height: auto;
@@ -672,7 +415,10 @@ a, a:visited {
     right: 0;
     z-index: 1;
     background: linear-gradient(
-                    270.00deg, #f8f8f8 16.836%, rgba(248, 248, 248, 0) 100%);
+        270.00deg,
+        $gray-lighter 16.836%,
+        $gray-lighter-transparent 100%
+    );
   }
 
   .swiper-pagination {
