Some JS and refactoring. And magic.
- Add handler for article read-more button, expanding text content
- Insert lorem to article to show expantion of long artile
- Changed paragraphs logic (removed <br> inside one paragraph and separated them to independed <p>'s
- "Read more" is now button instead of link
- Spaces to tabs refactoring

- Prettier and ESLint code style magic

--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -1,11 +1,13 @@
 /*Resetting values*/
 html {
-  font-family: "TT Lakes", Arial, sans-serif;
-  box-sizing: border-box;
+	font-family: 'TT Lakes', Arial, sans-serif;
+	box-sizing: border-box;
 }
 
-*, *:before, *:after {
-  box-sizing: inherit;
+*,
+*:before,
+*:after {
+	box-sizing: inherit;
 }
 
 ul,
@@ -13,14 +15,15 @@ li,
 body,
 p,
 button {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  border: none;
-  font: inherit;
+	margin: 0;
+	padding: 0;
+	list-style: none;
+	border: none;
+	font: inherit;
 }
 
-a, a:visited {
-  text-decoration: none;
-  color: inherit;
+a,
+a:visited {
+	text-decoration: none;
+	color: inherit;
 }
