--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -1,19 +1,18 @@
 // Breakpoints
 $screen-zero: 0;
 $screen-mobile: 320px;
-$screen-laptop:  768px;
-$screen-desktop:  1120px;
+$screen-laptop: 768px;
+$screen-desktop: 1120px;
 
 // Colours
-$white: #fff;
-$light-green: #D9FFF5;
-$lighter-green: #B8FFEC;
+$white: #ffffff;
+$light-green: #d9fff5;
+$lighter-green: #b8ffec;
 $green: #41f6d7;
 $dark: #1b1c21;
 $button-red: #ff3e79;
 
 $gray-lighter: #f8f8f8;
-
-$gray-lighter-transparent: #f8f8f800;
 $light-gray: #eaeaea;
-$gray: #7E7E82;
+$gray: #7e7e82;
+$gray-lighter-transparent: #f8f8f800;
