--- a/src/styles/blocks/_article.scss
+++ b/src/styles/blocks/_article.scss
@@ -1,30 +1,37 @@
-
 .article {
-	margin: 24px auto;
+	margin: 0 auto;
+	display: flex;
+	flex-direction: column;
+	grid-template-columns: 1fr 1fr;
+	grid-template-areas:
+		'articleText image'
+		'readNext image';
 
-	@media screen and (768px <= width) and (width < 1120px) {
+	@media screen and (768px <= width) {
+		display: grid;
+		width: 100%;
 		position: relative;
-		width: 720px;
 		height: 242px;
 	}
 
 	@media screen and (width >= 1120px) {
-		display: flex;
 	}
 
 	&__content {
-		display: block;
+		//display: flex;
+		//flex-direction: column;
+		grid-area: articleText;
+		height: 200px;
 		overflow: hidden;
-		margin: 0 16px 16px 16px;
+		margin: 0 16px;
 
-		@media screen and (768px <= width) and (width < 1120px) {
-			position: relative;
-			width: 312px;
-			margin: 0;
+		transition: height linear 100ms;
+
+		@media screen and (768px <= width) {
+			//position: relative;
 		}
 
-		@media screen and (width >= 1120px){
-			max-width: 50%;
+		@media screen and (width >= 1120px) {
 			margin-left: 32px;
 		}
 
@@ -33,19 +40,19 @@
 		}
 
 		&--text {
-			overflow: hidden;
-			height: 90px;
+			margin-bottom: 16px;
+			//height: 90px;
 
-			@media screen and (768px <= width) and (width < 1120px) {
+			@media screen and (768px <= width) {
 				line-height: 20px;
-				max-width: 312px;
-				height: 160px;
+				//max-width: 312px;
+				//height: 160px;
 			}
 
-			@media screen and (width >= 1120px){
+			@media screen and (width >= 1120px) {
 				line-height: 20px;
-				max-width: 490px;
-				height: auto;
+				//max-width: 490px;
+				//height: auto;
 			}
 		}
 
@@ -55,68 +62,63 @@
 		//}
 
 		&--read-next {
+			grid-area: readNext;
+
 			font-size: 16px;
 			font-weight: 500;
 			line-height: 150%;
 			display: flex;
 			position: relative;
-			margin: 16px 0;
-			padding-left: 20px;
+			margin: 16px 0 16px 8px;
+			padding: 0 0 8px 20px;
 			letter-spacing: -0.01em;
+			background-color: $gray-lighter;
 			color: $dark;
 
-			@media screen and (768px <= width) and (width < 1120px) {
-				margin: 20px 0 0 0;
+			@media screen and (width >= 768px) {
+				margin: 0 0 0 8px;
 			}
 
 			@media screen and (width >= 1120px) {
-				margin: 20px 0 0 0;
+				margin: 16px 0 0 25px;
 			}
 
 			&:before {
-				display: block;
 				content: '';
 				position: absolute;
-				width: 5px;
-				height: 5px;
+				left: 10px;
 				top: 4px;
-				left: 10px;
-				transform: rotate(45deg);
-				border-bottom: 1px $green solid;
-				border-right: 1px $green solid;
-			}
-
-			&:after {
-				content: '';
-				position: absolute;
-				display: block;
-				width: 5px;
 				height: 5px;
-				top: 10px;
-				left: 10px;
-				transform: rotate(45deg);
-				border-bottom: 1px $green solid;
-				border-right: 1px $green solid;
+				width: 5px;
+				rotate: 45deg;
+				box-shadow:
+					1px 1px 0 0 $green,
+					3px 3px 0 0 $gray-lighter,
+					4px 4px 0 0 $green;
+			}
+		}
+
+		&--read-less {
+			margin-top: 8px;
+
+			&:before {
+				top: 13px;
+				rotate: 225deg;
 			}
 		}
 	}
 
 	&__image {
+		grid-area: image;
 		width: 100%;
 		height: auto;
 		max-height: 100%;
+		object-fit: cover;
 
-		@media screen and (768px <= width) and (width < 1120px) {
-			position: absolute;
-			top: 0;
-			right: 0;
-			display: block;
-			max-width: 50%;
+		@media screen and (768px <= width) {
 		}
 
 		@media screen and (width >= 1120px) {
-			max-width: 50%;
-			height: auto;
 		}
 	}
 }
