Refactoring + new content
- Moved and renamed modal menu. Now it's positionoed where it should be. Hidden for laptop and mobile screens and visible by default for desktops.
- Show more and read more buttons fixed
- Added mixins
- changed body height to 100vh so all visible area is covered

--- a/src/styles/_style.scss
+++ b/src/styles/_style.scss
@@ -2,6 +2,7 @@
 @import "base/reset";
 @import "base/variables";
 @import "base/fonts";
+@import 'base/mixins';
 @import "pages/index";
 @import "blocks/article";
 @import "blocks/brands-repair-list";
