--- a/src/styles/blocks/_mobile-side.scss
+++ b/src/styles/blocks/_mobile-side.scss
@@ -1,14 +1,19 @@
-.mobile-side {
+.modal-menu {
+	position: absolute;
+	top: 0;
 	display: flex;
 	flex-direction: column;
-	position: relative;
-	min-height: 100%;
-	width: 320px;
+	height: 100%;
 	background-color: $white;
 	z-index: 10;
-	box-shadow:
-		16px 0 52px 0 rgba(14, 24, 80, 0.2),
-		-2px 0 4px 0 rgba(69, 79, 126, 0.02);
+	box-shadow: 16px 0 52px 0 rgba(14, 24, 80, 0.2),
+	-2px 0 4px 0 rgba(69, 79, 126, 0.02);
+
+	@media screen and (width >= $screen-desktop) {
+		box-shadow: unset;
+		min-height: unset;
+		height: 920px;
+	}
 
 	&--side-margins--20 {
 		padding: 0 20px;
@@ -23,8 +28,14 @@
 		font-weight: 700;
 	}
 
-	&--width--320 {
-		width: 320px;
+	&--width-handling {
+		width: 100%;
+		max-width: 360px;
+
+		@media screen and (width >= $screen-desktop) {
+			width: 320px;
+			max-width: unset;
+		}
 	}
 
 	&__menu-item {
@@ -49,6 +60,12 @@
 
 		&:first-child {
 			margin-top: 45px;
+		}
+	}
+
+	&--closed {
+		@media screen and (width < $screen-desktop) {
+			display: none;
 		}
 	}
 }
