--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -12,7 +12,9 @@ $green: #41f6d7;
 $dark: #1b1c21;
 $button-red: #ff3e79;
 
-$gray-lighter: #f8f8f8;
+// $gray-lighter: #f8f8f8;
+$gray-lighter: #D96E6E;
+
 $light-gray: #eaeaea;
 $gray: #7e7e82;
 $gray-lighter-transparent: #f8f8f800;
