--- a/src/styles/blocks/_article.scss
+++ b/src/styles/blocks/_article.scss
@@ -11,7 +11,7 @@
 		display: grid;
 		width: 100%;
 		position: relative;
-		height: 242px;
+		// height: 242px;
 	}
 
 	@media screen and (width >= 1120px) {
