--- a/src/styles/_style.scss
+++ b/src/styles/_style.scss
@@ -5,7 +5,7 @@
 @import 'base/mixins';
 @import "pages/index";
 @import "blocks/article";
-@import "blocks/brands-repair-list";
+@import "blocks/repair-list";
 @import "blocks/lang-switch";
 @import "blocks/menu";
 @import "blocks/mobile-side";
