Markup finished, refactoring etc
- Markup is done till the end (remaining some styles to fix)
- Swiper markup structure universalized
- Modal menu tag renamed to aside
-  Styles to new elements
- Color vars renamed to make them consistent
- Aside menu height fix, on desktop width is full page height now but its content height limited to correspond figma layout

--- a/src/styles/_style.scss
+++ b/src/styles/_style.scss
@@ -10,4 +10,5 @@
 @import "blocks/menu";
 @import "blocks/mobile-side";
 @import "blocks/slider-menu";
+@import 'blocks/prices';
 @import "blocks/swiper";
