--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -6,15 +6,16 @@ $screen-desktop: 1120px;
 
 // Colours
 $white: #ffffff;
-$light-green: #d9fff5;
-$lighter-green: #b8ffec;
+
+$green-lighter: #d9fff5;
+$green-light: #b8ffec;
 $green: #41f6d7;
+
 $dark: #1b1c21;
+
 $button-red: #ff3e79;
 
-// $gray-lighter: #f8f8f8;
-$gray-lighter: #D96E6E;
-
-$light-gray: #eaeaea;
-$gray: #7e7e82;
 $gray-lighter-transparent: #f8f8f800;
+$gray-lighter: #f8f8f8;
+$gray-light: #eaeaea;
+$gray: #7e7e82;
