--- a/src/styles/blocks/_menu.scss
+++ b/src/styles/blocks/_menu.scss
@@ -2,7 +2,7 @@
 	display: flex;
 
 	&--header-menu {
-		border-bottom: 1px $lighter-green solid;
+		border-bottom: 1px $green-lighter solid;
 		background-color: $white;
 
 		@media screen and (width >= 1120px) {
@@ -34,6 +34,10 @@
 
 		&--push-down {
 			margin-top: auto;
+
+			@media screen and (width >= $screen-desktop) {
+				margin-top: 240px;
+			}
 		}
 
 		&:last-child {
@@ -104,7 +108,7 @@
 			height: 32px;
 			margin-top: auto;
 			margin-bottom: auto;
-			border: 1px $light-gray solid;
+			border: 1px $gray-light solid;
 			border-radius: 1px;
 		}
 
@@ -117,7 +121,7 @@
 	// end of .header-item
 
 	&--active-item {
-		border: 2px $lighter-green solid;
+		border: 2px $green-lighter solid;
 		border-radius: 5px;
 		background-color: $white;
 	}
