--- a/src/styles/pages/_index.scss
+++ b/src/styles/pages/_index.scss
@@ -70,6 +70,10 @@
 		&--disclaimer {
 			max-width: 440px;
 			font-size: 14px;
+
+			@media screen and (width >=$screen-laptop) {
+				padding: 0 0 0 32px;
+			}
 		}
 	}
 }
@@ -92,18 +96,22 @@
 	font-weight: bold;
 	background-color: $gray-lighter;
 	text-align: left;
-	margin: 16px;
+	margin-top: 16px;
+	padding: 0 0 0 16px;
 
 	display: flex;
 	flex-direction: row;
 	column-gap: 8px;
 
-	@include arrowIcon();
+	@media screen and (width >=$screen-laptop) {
+		padding: 0 0 0 32px;
+	}
 
 	@media screen and (width <= 350px) {
 		max-width: 200px;
 	}
 
+	@include arrowIcon();
 	&:after {
 		position: static;
 		align-self: center;
@@ -139,7 +147,6 @@
 	}
 
 	&__item {
-
 		&--copy {
 			@media screen and (width >= $screen-laptop) {
 				text-align: left;
