--- a/src/styles/blocks/_prices.scss
+++ b/src/styles/blocks/_prices.scss
@@ -1,58 +1,148 @@
 .prices {
 	position: relative;
+	font-size: 14px;
+
+	&__wrapper {
+		@media screen and (width >= $screen-laptop) {
+			display: flex;
+			flex-direction: column;
+
+			width: unset;
+			padding: 16px;
+			margin: 32px;
+
+			background-color: $white;
+			border-radius: 6px;
+		}
+
+		& > .prices__card:not(:last-child) {
+			border-bottom: 1px $gray-light solid;
+		}
+	}
 
 	&__card {
 		padding: 16px;
 		position: relative;
 		display: flex;
 		flex-direction: column;
-		flex: 0 0 260px;
-		height: 200px;
-		background-color: $white;
+		flex: 0 0 228px;
+		height: 168px;
 		border-radius: 6px;
+		background-color: $white;
+
+		@media screen and (width >= $screen-laptop) {
+			display: grid;
+			flex: unset;
+			height: 30px;
+			grid-template-columns: 350px 1fr 1fr 1fr;
+			grid-template-areas: 'service price duration order';
+			border-radius: unset;
+
+			align-items: center;
+		}
+
+		&--title {
+		}
 
 		&--service {
 			margin-bottom: 15px;
+			grid-area: service;
+
+			@media screen and (width >= $screen-laptop) {
+				margin-bottom: 0;
+			}
 
 			&:before {
 				content: 'Ремонтные услуги';
 				color: $gray;
 				display: flex;
 				flex-direction: column;
+
+				@media screen and (width >= $screen-laptop) {
+					display: none;
+				}
 			}
 		}
 
 		&--price {
 			margin-bottom: 15px;
+			grid-area: price;
+
+			@media screen and (width >= $screen-laptop) {
+				margin-bottom: 0;
+			}
 
 			&:before {
 				content: 'Цена';
 				color: $gray;
 				display: flex;
 				flex-direction: column;
+
+				@media screen and (width >= $screen-laptop) {
+					display: none;
+				}
 			}
 		}
 
 		&--duration {
+			margin-bottom: 15px;
+			grid-area: duration;
+
+			@media screen and (width >= $screen-laptop) {
+				margin-bottom: 0;
+			}
 
 			&:before {
 				content: 'Срок';
 				color: $gray;
 				display: flex;
 				flex-direction: column;
+
+				@media screen and (width >= $screen-laptop) {
+					display: none;
+				}
 			}
 		}
+	}
 
+	&__table-header {
+		color: $gray;
+		background-color: $gray-lighter;
+		grid-template-columns: 350px 1fr 2fr;
+		grid-template-areas: 'service price duration .';
+		padding: 0 32px;
+		margin: 0 32px;
+
+		@media screen and (width <= $screen-laptop) {
+			display: none;
+		}
 	}
 
 	&__btn-order {
-		width: 120px;
+		width: 100px;
 		height: 30px;
+		padding-right: 10px;
 		border-radius: 16px;
 		color: $white;
 		background-color: $button-red;
 		position: absolute;
 		bottom: 16px;
 		right: 16px;
+
+		grid-area: order;
+		@include arrowIcon();
+		&:after {
+			border-top: $white 3px solid;
+			border-right: $white 3px solid;
+
+			scale: 0.5;
+			top: 10px;
+		}
+		@media screen and (width >= $screen-laptop) {
+			position: static;
+			&:after {
+				top: 25px;
+			}
+		}
 	}
 }
