--- a/src/styles/blocks/_modal-menu.scss
+++ b/src/styles/blocks/_modal-menu.scss
@@ -6,11 +6,37 @@
 	height: 100%;
 	background-color: $white;
 	z-index: 10;
-	box-shadow: 16px 0 52px 0 rgba(14, 24, 80, 0.2),
-	-2px 0 4px 0 rgba(69, 79, 126, 0.02);
+	box-shadow:
+		16px 0 52px 0 rgba(14, 24, 80, 0.2),
+		-2px 0 4px 0 rgba(69, 79, 126, 0.02);
 
 	@media screen and (width >= $screen-desktop) {
 		box-shadow: unset;
+	}
+
+	&__menu-item {
+		display: flex;
+		align-items: center;
+		margin: 0 0 12px 14px;
+		padding: 10px;
+
+		&--active {
+			margin-left: 10px;
+
+			&:first-child {
+				margin-top: 45px;
+			}
+
+			&:before {
+				content: '';
+				width: 4px;
+				height: 32px;
+				transform: translateX(-20px);
+				border-top-right-radius: 4px;
+				border-bottom-right-radius: 4px;
+				background-color: $green;
+			}
+		}
 	}
 
 	&--side-margins--20 {
@@ -33,31 +59,6 @@
 		@media screen and (width >= $screen-desktop) {
 			width: 320px;
 			max-width: unset;
-		}
-	}
-
-	&__menu-item {
-		display: flex;
-		align-items: center;
-		margin: 0 0 12px 14px;
-		padding: 10px;
-
-		&--active {
-			margin-left: 10px;
-
-			&:before {
-				content: '';
-				width: 4px;
-				height: 32px;
-				transform: translateX(-20px);
-				border-top-right-radius: 4px;
-				border-bottom-right-radius: 4px;
-				background-color: $green;
-			}
-		}
-
-		&:first-child {
-			margin-top: 45px;
 		}
 	}
 
