Modal menus added
- Feedback and Call modal menu added
- Modal screen fade moved outside and is now comon for all screen/ Changed its z-index to cover all but modal menu
- Fixed prices table button arrow display

--- a/src/styles/_style.scss
+++ b/src/styles/_style.scss
@@ -9,6 +9,7 @@
 @import 'blocks/lang-switch';
 @import 'blocks/menu';
 @import 'blocks/modal-menu';
+@import 'blocks/modal-feedback';
 @import 'blocks/slider-menu';
 @import 'blocks/prices';
 @import 'blocks/swiper';
