Link colors fix and refactoring
- fixed links colors
- renamed import manager file
- moved some blocks from index.scss to separate files
-

--- a/src/styles/_style-manager.scss
+++ b/src/styles/_style-manager.scss
@@ -13,3 +13,5 @@
 @import 'blocks/slider-menu';
 @import 'blocks/prices';
 @import 'blocks/swiper';
+@import 'blocks/modal-blur';
+@import 'blocks/buttons';
