--- a/src/styles/pages/_index.scss
+++ b/src/styles/pages/_index.scss
@@ -78,57 +78,6 @@
 	}
 }
 
-.modal-blur {
-	width: 100vw;
-	height: 100vh;
-	background-color: $dark;
-	opacity: 90%;
-	position: fixed;
-	top: 0;
-	z-index: 15;
-
-	&--off {
-		display: none;
-	}
-}
-
-.kp-btn {
-	font-weight: bold;
-	background-color: $gray-lighter;
-	text-align: left;
-	margin-top: 16px;
-	padding: 0 0 0 16px;
-
-	position: relative;
-	display: flex;
-	flex-direction: row;
-	column-gap: 8px;
-
-	@media screen and (width >=$screen-laptop) {
-		padding: 0 0 0 32px;
-	}
-
-	@media screen and (width <= 350px) {
-		max-width: 200px;
-	}
-
-	@include arrowIcon();
-	&:after {
-		position: static;
-		align-self: center;
-
-		scale: 0.85;
-		border-top: 3px solid $button-red;
-		border-right: 3px solid $button-red;
-
-		@media screen and (width <= 350px) {
-			position: absolute;
-			bottom: 5px;
-			left: 127px;
-		}
-	}
-}
-
 .footer {
 	color: $gray;
 	font-size: 14px;
@@ -166,5 +115,15 @@
 		&--privacy {
 			text-align: center;
 		}
+	}
+}
+
+.link {
+	color: inherit;
+	&:visited {
+	}
+
+	&--red {
+		color: $button-red;
 	}
 }
