--- a/src/styles/blocks/_modal-extra.scss
+++ b/src/styles/blocks/_modal-extra.scss
@@ -1,22 +1,37 @@
 .modal-extra {
 	z-index: 20;
 	display: none;
+	max-width: 420px;
 
 	@media screen and (width >= $screen-laptop) {
 		right: 0;
 	}
 
 	&__form {
-		padding: 16px;
+		padding: 0 16px;
 	}
 
 	&__label {
 		display: block;
+		margin-bottom: 16px;
+	}
+
+	&__input {
+		width: 100%;
+		height: 48px;
+		padding: 12px 16px;
+
+		border-radius: 6px;
+		border: 1px $gray-light solid;
 	}
 
 	&__message {
-		width: 288px;
+		width: 100%;
 		height: 120px;
+		padding: 12px 16px;
+
+		border: 1px $gray-light solid;
+		border-radius: 6px;
 	}
 
 	&__text {
@@ -25,7 +40,7 @@
 	}
 
 	&__btn-send {
-		width: 100px;
+		width: 130px;
 		height: 30px;
 		padding-right: 10px;
 		margin-left: auto;
@@ -36,6 +51,9 @@
 		background-color: $button-red;
 		position: relative;
 
+		transition-property: opacity, transform;
+		transition-duration: 300ms;
+
 		@include arrowIcon();
 		@media screen and (width >= $screen-laptop) {
 			//position: static;
@@ -45,14 +63,22 @@
 			border-top: $white 3px solid;
 			border-right: $white 3px solid;
 
-			scale: 0.8;
-			top: 10px;
+			scale: 0.86;
+			top: 11px;
+			right: 14px;
+		}
+
+		&:hover {
+			opacity: 0.7;
+			transform: scale(1.1);
 		}
 	}
 
 	&--is-on {
 		display: flex;
+		position: fixed;
 		z-index: 100;
+		height: 100%;
 	}
 
 	&__btn {
@@ -62,6 +88,10 @@
 		@media screen and (width >= $screen-laptop) {
 			position: absolute;
 			margin-left: -72px;
+		}
+
+		@media screen and (width >= $screen-desktop) {
+			display: block;
 		}
 	}
 }
